--- a/DebtSettlement.Web/Web.config
+++ b/DebtSettlement.Web/Web.config
@@ -8,10 +8,11 @@
     <add name="CollectSmContext" connectionString="DATA SOURCE=collectsm_test.world;PASSWORD=Dzk#7$Gp;USER ID=COLLECTSM;" providerName="Oracle.ManagedDataAccess.Client" />
   </connectionStrings>
   <appSettings>
-    <add key="DictionaryAPIAddress" value="https://dict-t1.ac-dev.alfa.bank.int/dictionary/v1/" />
+    <add key="CreateDebtSettlementPermissionName" value="CreateDebtSettlement" />
+    <add key="DictionaryAPIAddress" value="https://dict-uat1.ac-dev.alfa.bank.int/dictionary/v1/" />
     <add key="DictionariesApiEndpoint" value="https://dict-d1.ac-dev.alfa.bank.int/" />
-    <add key="HRWebAPIAddress" value="https://hrapi-t1.ac-dev.alfa.bank.int/" />
-    <add key="NotificationsServiceUrl" value="https://notify-t1.ac-dev.alfa.bank.int/api/" />
+    <add key="HRWebAPIAddress" value="https://hrapi-uat1.ac-dev.alfa.bank.int/" />
+    <add key="NotificationsServiceUrl" value="https://notify-uat1.ac-dev.alfa.bank.int/api/" />
     <add key="WorkflowEngineWebAPIAddress" value="https://we-uat1.ac-dev.alfa.bank.int/" />
     <add key="CollateralServiceApiEndpoint" value="https://coll-uat1.ac-dev.alfa.bank.int/" />
     <add key="DefaultWorkflowSchemeCode" value="DS" />
