--- a/DebtSettlement.Web/DebtSettlement.Web.csproj
+++ b/DebtSettlement.Web/DebtSettlement.Web.csproj
@@ -198,8 +198,8 @@
       <HintPath>..\packages\WebGrease.1.6.0\lib\WebGrease.dll</HintPath>
       <Private>True</Private>
     </Reference>
-    <Reference Include="WorkflowEngine.Client, Version=1.0.0.12, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\WorkflowEngine.Client.1.0.0.12\lib\net462\WorkflowEngine.Client.dll</HintPath>
+    <Reference Include="WorkflowEngine.Client, Version=1.0.0.17, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\WorkflowEngine.Client.1.0.0.17\lib\net462\WorkflowEngine.Client.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
@@ -898,7 +898,8 @@
     <None Include="Properties\PublishProfiles\kacollapu02 89.pubxml" />
     <None Include="Properties\PublishProfiles\kacollapu02.pubxml" />
     <None Include="Scripts\jquery-3.1.1.intellisense.js" />
-    <Content Include="Scripts\DS\ds.js" />
+    <Content Include="Scripts\DS\initiatorForm.js" />
+    <Content Include="Scripts\DS\orkForm.js" />
     <Content Include="Scripts\jquery-3.1.1.js" />
     <Content Include="Scripts\jquery-3.1.1.min.js" />
     <Content Include="Scripts\jquery-3.1.1.slim.js" />
@@ -944,7 +945,6 @@
     <Compile Include="Models\ApplicationForm\Active.cs" />
     <Compile Include="Controllers\Api\DictionaryController.cs" />
     <Compile Include="Controllers\Api\DebtSettlementController.cs" />
-    <Compile Include="Controllers\Api\TasksController.cs" />
     <Compile Include="Controllers\Api\AgreementsController.cs" />
     <Compile Include="Controllers\Api\UsersController.cs" />
     <Compile Include="Controllers\ErrorController.cs" />
@@ -954,14 +954,19 @@
     <Compile Include="Helpers\AgreementLoaderHelper.cs" />
     <Compile Include="Helpers\Helper.cs" />
     <Compile Include="Helpers\LayoutHelper.cs" />
+    <Compile Include="Models\ApplicationForm\ActiveOtherParameters.cs" />
     <Compile Include="Models\ApplicationForm\Client.cs" />
+    <Compile Include="Models\ApplicationForm\CollateralOtherParameters.cs" />
     <Compile Include="Models\ApplicationForm\Credit.cs" />
     <Compile Include="Models\ApplicationForm\Address.cs" />
     <Compile Include="Models\ApplicationForm\Collateral.cs" />
+    <Compile Include="Models\ApplicationForm\Decision.cs" />
+    <Compile Include="Models\ApplicationForm\Finance.cs" />
     <Compile Include="Models\ApplicationForm\Income.cs" />
     <Compile Include="Models\ApplicationForm\Job.cs" />
     <Compile Include="Models\ApplicationForm\Liability.cs" />
     <Compile Include="Models\ApplicationForm\ReasonToDenyDS.cs" />
+    <Compile Include="Models\ApplicationForm\Status.cs" />
     <Compile Include="Models\ExecuteCommandModel.cs" />
     <Compile Include="Models\RejectProlongateTaskViewModel.cs" />
     <Compile Include="Models\ProlongateTaskViewModel.cs" />
@@ -987,22 +992,23 @@
     <Content Include="Views\Shared\_Layout.cshtml" />
     <Content Include="Views\Shared\_Navigation.cshtml" />
     <Content Include="Views\Shared\_NotReadyModal.cshtml" />
-    <Content Include="Views\Task\CreateTask.cshtml" />
+    <Content Include="Views\DebtSettlement\CreateTask.cshtml" />
     <Content Include="Views\_ViewStart.cshtml" />
-    <Content Include="Views\Task\List.cshtml" />
-    <Content Include="Views\Task\Item.cshtml" />
-    <Content Include="Views\Task\History.cshtml" />
-    <Content Include="Views\Task\AgreementNotFound.cshtml" />
+    <Content Include="Views\DebtSettlement\List.cshtml" />
+    <Content Include="Views\DebtSettlement\Item.cshtml" />
+    <Content Include="Views\DebtSettlement\History.cshtml" />
+    <Content Include="Views\DebtSettlement\AgreementNotFound.cshtml" />
     <Content Include="Views\Shared\_SimpleLayout.cshtml" />
-    <Content Include="Views\Task\TaskCreated.cshtml" />
-    <Content Include="Views\Task\ListPartial.cshtml" />
-    <Content Include="Views\Task\UploadFileWithAgreements.cshtml" />
+    <Content Include="Views\DebtSettlement\TaskCreated.cshtml" />
+    <Content Include="Views\DebtSettlement\ListPartial.cshtml" />
+    <Content Include="Views\DebtSettlement\UploadFileWithAgreements.cshtml" />
     <Content Include="Views\Shared\_AppHeaderSctipts.cshtml" />
-    <Content Include="Views\Task\_sharedScripts.cshtml" />
     <Content Include="Views\DebtSettlement\CreateDebtSettlement.cshtml" />
     <Content Include="Views\DebtSettlement\_Collateral.cshtml" />
     <Content Include="Views\DebtSettlement\_Actives.cshtml" />
     <Content Include="Views\DebtSettlement\DSCreated.cshtml" />
+    <Content Include="Views\DebtSettlement\_sharedScripts.cshtml" />
+    <Content Include="Views\DebtSettlement\ORKDeptSettlement.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
